# dast_ex1

./: .gitignore  AVLTree.h  AvlTree.h  BinaryTree.h  CMakeLists.txt  LinkedList.h  Player.cpp  Player.h  README.md  Team.cpp  Team.h  Tests.h  Utils.cpp  Utils.h  create_submission.sh  main.cpp  run_tests_technion.sh  tester.sh  tools.h  utils.cpp  utils.h  worldcup23a1.cpp  worldcup23a1.h
my_out/: my_out2.txt
test_maker/: generator.py  test_AVL_insertions_deletions.h  test_AVL_memory_leaks.h
